--- a/index.html
+++ b/index.html
@@ -823,7 +823,7 @@
                 </div>
               </div>
               <img
-                src="https://blackrockdigital.github.io/startbootstrap-agency/img/portfolio/roundicons.png"
+                src="https://raw.githubusercontent.com/klar-templates/agency/master/img/portfolio/roundicons.png"
                 class="img-responsive"
                 alt="" />
             </a>
@@ -849,7 +849,7 @@
                 </div>
               </div>
               <img
-                src="https://blackrockdigital.github.io/startbootstrap-agency/img/portfolio/startup-framework.png"
+                src="https://raw.githubusercontent.com/klar-templates/agency/master/img/portfolio/startup-framework.png"
                 class="img-responsive"
                 alt="" />
             </a>
@@ -875,7 +875,7 @@
                 </div>
               </div>
               <img
-                src="https://blackrockdigital.github.io/startbootstrap-agency/img/portfolio/treehouse.png"
+                src="https://raw.githubusercontent.com/klar-templates/agency/master/img/portfolio/treehouse.png"
                 class="img-responsive"
                 alt="" />
             </a>
@@ -901,7 +901,7 @@
                 </div>
               </div>
               <img
-                src="https://blackrockdigital.github.io/startbootstrap-agency/img/portfolio/golden.png"
+                src="https://raw.githubusercontent.com/klar-templates/agency/master/img/portfolio/golden.png"
                 class="img-responsive"
                 alt="" />
             </a>
@@ -927,7 +927,7 @@
                 </div>
               </div>
               <img
-                src="https://blackrockdigital.github.io/startbootstrap-agency/img/portfolio/escape.png"
+                src="https://raw.githubusercontent.com/klar-templates/agency/master/img/portfolio/escape.png"
                 class="img-responsive"
                 alt="" />
             </a>
@@ -953,7 +953,7 @@
                 </div>
               </div>
               <img
-                src="https://blackrockdigital.github.io/startbootstrap-agency/img/portfolio/dreams.png"
+                src="https://raw.githubusercontent.com/klar-templates/agency/master/img/portfolio/dreams.png"
                 class="img-responsive"
                 alt="" />
             </a>
