--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
   data-placement="top"
   data-wrapper="true"
   data-inset="true"
-  style="background-image: url(https://blackrockdigital.github.io/startbootstrap-agency/img/header-bg.jpg);text-align:center;">
+  style="background-image: url(https://raw.githubusercontent.com/klar-templates/agency/master/img/header-bg.jpg);text-align:center;">
   <div class="container">
     <div class="intro-text">
       
@@ -1011,7 +1011,7 @@
                 <img
                   class="img-responsive mg-centered"
                   data-field-string-file="items[0].image"
-                  src="https://blackrockdigital.github.io/startbootstrap-agency/img/portfolio/roundicons.png"
+                  src="https://raw.githubusercontent.com/klar-templates/agency/master/img/portfolio/roundicons.png"
                   alt="" />
               </div>
             </div>  
@@ -1057,7 +1057,7 @@
                 <img
                   class="img-responsive mg-centered"
                   data-field-string-file="items[1].image"
-                  src="https://blackrockdigital.github.io/startbootstrap-agency/img/portfolio/startup-framework.png"
+                  src="https://raw.githubusercontent.com/klar-templates/agency/master/img/portfolio/startup-framework.png"
                   alt="" />
               </div>
             </div>  
@@ -1103,7 +1103,7 @@
                 <img
                   class="img-responsive mg-centered"
                   data-field-string-file="items[2].image"
-                  src="https://blackrockdigital.github.io/startbootstrap-agency/img/portfolio/treehouse.png"
+                  src="https://raw.githubusercontent.com/klar-templates/agency/master/img/portfolio/treehouse.png"
                   alt="" />
               </div>
             </div>  
@@ -1149,7 +1149,7 @@
                 <img
                   class="img-responsive mg-centered"
                   data-field-string-file="items[3].image"
-                  src="https://blackrockdigital.github.io/startbootstrap-agency/img/portfolio/golden.png"
+                  src="https://raw.githubusercontent.com/klar-templates/agency/master/img/portfolio/golden.png"
                   alt="" />
               </div>
             </div>  
@@ -1195,7 +1195,7 @@
                 <img
                   class="img-responsive mg-centered"
                   data-field-string-file="items[4].image"
-                  src="https://blackrockdigital.github.io/startbootstrap-agency/img/portfolio/escape.png"
+                  src="https://raw.githubusercontent.com/klar-templates/agency/master/img/portfolio/escape.png"
                   alt="" />
               </div>
             </div>  
@@ -1241,7 +1241,7 @@
                 <img
                   class="img-responsive mg-centered"
                   data-field-string-file="items[5].image"
-                  src="https://blackrockdigital.github.io/startbootstrap-agency/img/portfolio/dreams.png"
+                  src="https://raw.githubusercontent.com/klar-templates/agency/master/img/portfolio/dreams.png"
                   alt="" />
               </div>
             </div>  
@@ -1489,7 +1489,7 @@
           <li data-field-array-item>
             <div class="timeline-image">
             	<img
-		            src="https://blackrockdigital.github.io/startbootstrap-agency/img/about/1.jpg"
+		            src="https://raw.githubusercontent.com/klar-templates/agency/master/img/about/1.jpg"
 		            class="img-responsive img-circle"
 		            data-field-string-file="items[0].image"
 		            no-data-placement="top"
@@ -1517,7 +1517,7 @@
           <li class="timeline-inverted"  data-field-array-item>
             <div class="timeline-image">
             	<img
-		            src="https://blackrockdigital.github.io/startbootstrap-agency/img/about/2.jpg"
+		            src="https://raw.githubusercontent.com/klar-templates/agency/master/img/about/2.jpg"
 		            class="img-responsive img-circle"
 		            data-field-string-file="items[1].image"
 		            no-data-placement="top"
@@ -1545,7 +1545,7 @@
           <li data-field-array-item>
             <div class="timeline-image">
             	<img
-		            src="https://blackrockdigital.github.io/startbootstrap-agency/img/about/3.jpg"
+		            src="https://raw.githubusercontent.com/klar-templates/agency/master/img/about/3.jpg"
 		            class="img-responsive img-circle"
 		            data-field-string-file="items[2].image"
 		            no-data-placement="top"
@@ -1573,7 +1573,7 @@
           <li class="timeline-inverted"  data-field-array-item>
             <div class="timeline-image">
             	<img
-		            src="https://blackrockdigital.github.io/startbootstrap-agency/img/about/4.jpg"
+		            src="https://raw.githubusercontent.com/klar-templates/agency/master/img/about/4.jpg"
 		            class="img-responsive img-circle"
 		            data-field-string-file="items[3].image"
 		            no-data-placement="top"
@@ -1836,7 +1836,7 @@
       <div class="col-sm-4">
         <div class="team-member" data-field-array-item>
           <img
-            src="https://blackrockdigital.github.io/startbootstrap-agency/img/team/1.jpg"
+            src="https://raw.githubusercontent.com/klar-templates/agency/master/img/team/1.jpg"
             class="img-responsive img-circle"
             data-field-string-file="team[0].image"
             no-data-placement="top"
@@ -1856,7 +1856,7 @@
       <div class="col-sm-4">
         <div class="team-member" data-field-array-item>
           <img
-            src="https://blackrockdigital.github.io/startbootstrap-agency/img/team/2.jpg"
+            src="https://raw.githubusercontent.com/klar-templates/agency/master/img/team/2.jpg"
             class="img-responsive img-circle"
             data-field-string-file="team[1].image"
             no-data-placement="top"
@@ -1876,7 +1876,7 @@
       <div class="col-sm-4">
         <div class="team-member" data-field-array-item>
           <img
-            src="https://blackrockdigital.github.io/startbootstrap-agency/img/team/3.jpg"
+            src="https://raw.githubusercontent.com/klar-templates/agency/master/img/team/3.jpg"
             class="img-responsive img-circle"
             data-field-string-file="team[2].image"
             no-data-placement="top"
@@ -2006,7 +2006,7 @@
 <style>
 #contact {
   background-color: #222222;
-  /* background-image: url('https://blackrockdigital.github.io/startbootstrap-agency/img/map-image.png'); */
+  /* background-image: url('https://raw.githubusercontent.com/klar-templates/agency/master/img/map-image.png'); */
   background-position: center;
   background-repeat: no-repeat;
 }
@@ -2069,7 +2069,7 @@
   padding-top: 150px;
   padding-bottom: 150px;
   
-  background-image: url('https://blackrockdigital.github.io/startbootstrap-agency/img/map-image.png');
+  background-image: url('https://raw.githubusercontent.com/klar-templates/agency/master/img/map-image.png');
   
 }
 #contact .form-control:focus {
